# ChatGpt_Codex

./: .gitignore  AGENTS.md  CLAUDE.md  FUTURE_AGENT_REFACTORING_BRIEF.md  README.md  REQUIREMENTS.md  WORKFLOW.md  index.md  user.md
docker4ides/: .gitignore  README.md  REQUIREMENTS.md  dev-requirements.in  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.in  requirements.txt
docker4ides/docker4ides/: __init__.py  __main__.py  cli.py  compat.py  image_build.py  project.py  pycharm.py  runtime.py
docker4ides/docker4ides/assets/codium_with_claude/: __init__.py
docker4ides/docker4ides/assets/docker4pycharm/: Dockerfile  bootstrap-project.sh
docker4ides/docker4ides/commands/: __init__.py  base.py  bootstrap_project.py  vscode_with_claude.py
docker4ides/docker4ides/configurations/: pycharm.py  vscode_with_claude.py
docker4ides/docs/requirements/: r-docker-001-explicit-docker-capability-profiles.md  r-docs-001-generated-documentation-index.md  r-env-001-dockerized-pycharm-runtime.md  r-framework-001-shared-python-docker4ide-orchestration.md  r-proc-001-durable-human-agent-project-memory.md  r-project-001-per-project-ide-runtime-state.md  r-python-mvp-003-python-mvp-feature-scope.md  r-settings-001-per-ide-settings-profile-seed.md  r-state-001-persistent-ide-state-and-plugins.md
docker4ides/implementation-notes/bugs/: 2026-07-13-codium-run-option-parity.md  2026-07-13-vscodium-sandbox-silent-exit.md
docker4ides/scripts/: build-pex.sh
docker4ides/tests/: test_cli.py  test_codium_with_claude.py  test_project.py  test_pycharm.py
docs/: index.html  (+4 more)
(+144 files in other folders)
