[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker4ides"
version = "0.1.0"
description = "Profile-driven Docker launch tooling for isolated IDE development environments."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "DockerForIDEIsolation contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "click>=8.1,<9",
  "python-on-whales>=0.81.0,<0.82",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.3,<3",
  "nox>=2025.5,<2027",
  "pex>=2.20,<3",
  "pip-tools>=7.5,<8",
  "pytest>=7.4",
]

[project.scripts]
docker4ides = "docker4ides.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docker4ides*"]

[tool.setuptools.package-data]
"docker4ides.assets.docker4pycharm" = [
  "Dockerfile",
  "*.sh",
  "image-assets/*.md",
]
"docker4ides.assets.pycharm" = [
  "*.sh",
  "image-assets/*.md",
]
"docker4ides.assets.codium_with_claude" = [
  "*.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
files = ["docker4ides", "tests", "noxfile.py"]
warn_unused_configs = true
show_error_codes = true
pretty = true
